--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -41,6 +41,7 @@ jobs:
         login-server: ${{ secrets.AZURE_CONTAINER_REGISTRY }}
         username: ${{ secrets.AZURE_CONTAINER_REGISTRY_USERNAME }}
         password: ${{ secrets.AZURE_CONTAINER_REGISTRY_PASSWORD }}
+        auth-type: IDENTITY
 
     - name: Build and push Docker image
       uses: docker/build-push-action@v5
