--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -20,7 +20,7 @@ permissions:
 env:
   REGISTRY_NAME: ${{ secrets.AZURE_CONTAINER_REGISTRY }}
   IMAGE_NAME: reverser-backend
-  CONTAINER_APP_NAME: ${{ secrets.BACKEND_CONTAINER_APP_NAME }}
+  CONTAINER_APP_NAME: reverser-backend
   RESOURCE_GROUP: ${{ secrets.AZURE_RESOURCE_GROUP }}
   CONTAINER_APP_ENVIRONMENT: ${{ secrets.AZURE_CONTAINER_APP_ENVIRONMENT }}
 
