--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -20,7 +20,7 @@ permissions:
 env:
   REGISTRY_NAME: ${{ secrets.AZURE_CONTAINER_REGISTRY }}
   IMAGE_NAME: reverser-frontend
-  CONTAINER_APP_NAME: ${{ secrets.FRONTEND_CONTAINER_APP_NAME }}
+  CONTAINER_APP_NAME: reverser-frontend
   RESOURCE_GROUP: ${{ secrets.AZURE_RESOURCE_GROUP }}
   CONTAINER_APP_ENVIRONMENT: ${{ secrets.AZURE_CONTAINER_APP_ENVIRONMENT }}
 
