--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -59,23 +59,16 @@ jobs:
         tenant-id: ${{ secrets.AZURE_TENANT_ID }}
         subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-    - name: Deploy to Azure Container Apps
-      uses: azure/container-apps-deploy-action@v2
+    - name: Deploy Azure Container App
+      uses: azure/cli@v2
       with:
-        appSourcePath: ${{ github.workspace }}
-        acrName: ${{ secrets.AZURE_CONTAINER_REGISTRY }}
-        acrUsername: ${{ secrets.AZURE_CONTAINER_REGISTRY_USERNAME }}
-        acrPassword: ${{ secrets.AZURE_CONTAINER_REGISTRY_PASSWORD }}
-        containerAppEnvironment: ${{ env.CONTAINER_APP_ENVIRONMENT }}
-        containerAppName: ${{ env.CONTAINER_APP_NAME }}
-        resourceGroup: ${{ env.RESOURCE_GROUP }}
-        imageToDeploy: ${{ env.AZURE_CONTAINER_REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
-        targetPort: 4000
-        ingress: external
-        environmentVariables: |
-          PORT=4000
-          NODE_ENV=production
-
+        azcliversion: latest
+        inlineScript: |
+          az containerapp update \
+            --name ${{ env.CONTAINER_APP_NAME }} \
+            --resource-group ${{ env.RESOURCE_GROUP }} \
+            --image ${{ secrets.AZURE_CONTAINER_REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }} \
+            
     - name: Logout from Azure
       run: az logout
       if: always()
